Changelog started November, 2006; Currently at version 0.2

Legend:
--------------------------------------------------------------------------------
 ! Minor change or bugfix. (don't bother to log typos except between releases.)
 * Change like above, but affects templates.
 & Change that affects a language file. (make two if it affects templates too.)
 + Feature addition or improvement.
 - Feature or option removal.
 % Development flag or note, such as branching.


Pretty URLs 0.2                                                December 26, 2006
================================================================================
 ! Base: Don't give pretty URLs to recycled topics, and fixed '&quot;' issues. (Subs-PrettyUrls.php)
 ! Base: Adding and changing board URLs is now done through modifyBoard(). (Subs-Boards.php)
 ! ext-none: Fixed the Display template because a change hadn't been committed somehow.
 ! Base: Don't add an action in .htaccess because it won't work with an invalid board URL. (QueryString.php)
 + ext-none: Replace topic urls in SSI.php, News.php and Recent.php.

Pretty URLs 0.1                                                December 13, 2006
================================================================================
 + Base: Added generatePrettyUrl function and $characterHash with almost all characters from latin-1. (Subs-PrettyUrls.php)
 + Base: Generate the pretty URLs of the forum's boards. (install.php)
 + Base: Included an example .htaccess file (example.htaccess)
 + Base: Added 'pretty_root_url' setting, defaulting to $boardurl.
 + ext-none: Replace the board urls in the BoardIndex and MessageIndex templates.
 ! Base: Fixed $characterHash so '+' would never be in a URL. (Subs-PrettyUrls.php)
 ! Base: Fixed issues with '&amp;' and removed unwanted '-'s. (Subs-PrettyUrls.php)
 + Base: A new board deserves a new URL! (ManageBoards.php)
 + ext-none: Replaced the board URLs in SSI.php, News.php and Recent.php.