@@ -3,7 +3,7 @@
 
 <modification xmlns="http://www.simplemachines.org/xml/modification" xmlns:smf="http://www.simplemachines.org/">
 	<id>el:prettyurls</id>
-	<version>0.2</version>
+	<version>0.3</version>
 
 	<file name="$boarddir/index.php">
 		<operation>
@@ -128,6 +128,8 @@ function modifyBoard($board_id, &$boardOptions)
 //	Update the pretty board URLs
 	if (isset($boardOptions['pretty_url']))
 	{
+		require_once($sourcedir . '/Subs-PrettyUrls.php');
+
 		$pretty_url = generatePrettyUrl($boardOptions['pretty_url']);
 
 //		Set the current URL blank so that the array_search will work
@@ -154,6 +156,58 @@ function modifyBoard($board_id, &$boardOptions)
 		$boardOptions['pretty_url'] = $boardOptions['board_name'];
 
 	// Change the board according to the given specifications.
+]]></add>
+		</operation>
+	</file>
+
+	<file name="$sourcedir/Subs-Post.php">
+		<operation>
+			<search position="replace"><![CDATA[
+function createPost(&$msgOptions, &$topicOptions, &$posterOptions)
+{
+	global $db_prefix, $user_info, $ID_MEMBER, $txt, $modSettings;
+]]></search>
+			<add><![CDATA[
+function createPost(&$msgOptions, &$topicOptions, &$posterOptions)
+{
+	global $db_prefix, $user_info, $ID_MEMBER, $txt, $modSettings, $context, $sourcedir;
+]]></add>
+		</operation>
+
+		<operation>
+			<search position="replace"><![CDATA[
+		// There's been a new topic AND a new post today.
+]]></search>
+			<add><![CDATA[
+//		Generate the pretty URL of our exciting new topic
+		require_once($sourcedir . '/Subs-PrettyUrls.php');
+		$pretty_text = substr(generatePrettyUrl($msgOptions['subject']), 0, 80);
+
+//		Is the URL already there?
+		$query = db_query("
+			SELECT ID_TOPIC
+			FROM {$db_prefix}topics
+			WHERE pretty_url = '$pretty_text'
+			LIMIT 1", __FILE__, __LINE__);
+//		If it's not unique we need to change it
+		$notunique = mysql_num_rows($query);
+		mysql_free_result($query);
+
+//		Can't be empty, can't be a number and can't be the same as another
+		if ($pretty_text == '' || is_numeric($pretty_text) || $notunique != 0)
+//			Add suffix '-tID_TOPIC' to the pretty url
+			$pretty_text = substr($pretty_text, 0, 70) . ($pretty_text != '' ? '-t' : 't') . $topicOptions['id'];
+
+//		Update the database
+		db_query("
+			UPDATE {$db_prefix}topics
+			SET pretty_url = '" . $pretty_text . "'
+			WHERE ID_TOPIC = " . $topicOptions['id'], __FILE__, __LINE__);
+		db_query("
+			REPLACE INTO {$db_prefix}pretty_topic_urls (ID_TOPIC, ID_BOARD, pretty_url) 
+			VALUES (" . $topicOptions['id'] .", " . $topicOptions['board'] . ", '" . $pretty_text . "')", __FILE__, __LINE__);
+
+		// There's been a new topic AND a new post today.
 ]]></add>
 		</operation>
 	</file>
